name:                backend
version:             0.0.0.0
synopsis:            Play your own/favourite games with your friends, while styaing at home
-- description:
homepage:            https://github.com/konn/playlambda
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro@gmail.com
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md
cabal-version: >= 1.2
build-type: Simple

source-repository head
  type:     git
  location: git://github.com/konn/plyaland.git
  subdir:   backend

library
  if impl(ghcjs)
    buildable: False
  exposed-modules: 
    Web.PlayAtHome.Server.Types
    Web.PlayAtHome.Server
  hs-source-dirs:      src

  -- other-modules:
  ghc-options: -Wall
  -- other-extensions:
  build-depends:      base >=4.12.0.0
                    , common
                    , websockets
                    , time
                    , aeson
                    , unordered-containers
                    , stm
                    , pwstore-fast
                    , lens
                    , uuid
                    , text
                    , servant
                    , servant-server
                    , common
                    , frontend
                    , obelisk-backend
                    , obelisk-route
  default-language:    Haskell2010

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
