name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  ghc-options:    -Wall
  hs-source-dirs: src
  build-depends:  base
                , containers
                , unordered-containers
                , text
                , hashable
                , uuid
                , vector
                , bytestring
                , pwstore-fast
                , aeson
                , vector-instances
                , time
                , lens
                , obelisk-route
  exposed-modules:
    Web.PlayAtHome.Types
    Web.PlayAtHome.Route
