name:                frontend
version:             0.0.0.0
synopsis:            Play your own/favourite games with your friends, while styaing at home
-- description:
homepage:            https://github.com/konn/playlambda
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro@gmail.com
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/konn/plyaland.git
  subdir:   frontend

library
  hs-source-dirs: src
  build-depends:  base
                , common
                , obelisk-frontend
                , obelisk-route
                , jsaddle
                , reflex-dom
                , obelisk-executable-config-lookup
                , obelisk-generated-static
                , text
  exposed-modules:
    Frontend
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends:  base
                , common
                , obelisk-frontend
                , obelisk-route
                , reflex-dom
                , obelisk-generated-static
                , frontend
                , reflex
                , reflex-dom
                , common
                , lens
                , text
                , random
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
