name:                frontend
version:             0.0.0.0
synopsis:            Play your own/favourite games with your friends, while styaing at home
-- description:
homepage:            https://github.com/konn/playlambda
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro@gmail.com
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md
cabal-version: >= 1.8
build-type: Simple

source-repository head
  type:     git
  location: git://github.com/konn/plyaland.git
  subdir:   frontend

library
  hs-source-dirs: src
  build-depends:  base
                , common
                , jsaddle
                , lens
                , time
                , network-uri
                , dependent-sum
                , obelisk-executable-config-lookup
                , obelisk-frontend
                , obelisk-generated-static
                , obelisk-route
                , random
                , jsaddle-dom
                , modern-uri
                , reflex
                , reflex-dom
                , text
                , uuid
                , aeson
                , bytestring
                , containers
  exposed-modules:
    Web.PlayAtHome.Frontend
    Web.PlayAtHome.Frontend.Types
    Data.Promise
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends:  base
                , common
                , obelisk-frontend
                , obelisk-route
                , reflex-dom
                , frontend
                , jsaddle-dom
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
